--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,5 +38,8 @@ repositories {
 dependencies {
     implementation 'com.facebook.react:react-native:+'
 
-    implementation 'de.idnow.sdk:idnow-android-sdk:5.1.11'
+    implementation ('de.idnow.sdk:idnow-android-sdk:5.3.0') {
+        exclude group: 'de.authada.library'
+        exclude group: 'de.idnow.android.eid'
+    }
 }
