--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,12 +12,12 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion = 31
     buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion = 30
         versionCode 1
         versionName "1.0"
     }
@@ -31,7 +31,7 @@ repositories {
     mavenCentral()
     google()
     maven {
-        url "https://raw.githubusercontent.com/idnow/de.idnow.android/master"
+        url "https://raw.githubusercontent.com/idnow/de.idnow.android/de.idnow.android-5.3.0"
     }
 }
 
