--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,8 +38,14 @@ repositories {
     jcenter()
     mavenCentral()
     google()
+    maven {
+        url "https://raw.githubusercontent.com/idnow/de.idnow.android/master"
+    }
 }
 
 dependencies {
     implementation 'com.facebook.react:react-native:+'
+
+    implementation 'de.idnow.sdk:idnow-android-sdk:6.1.4'
+    implementation 'de.idnow.android.eid:idnow-android-eid-sdk:2.5.4'
 }
