--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,13 +39,23 @@ repositories {
     mavenCentral()
     google()
     maven {
-        url "https://raw.githubusercontent.com/idnow/de.idnow.android/master"
-    }
+            url "https://raw.githubusercontent.com/idnow/de.idnow.android/de.idnow.android-6.2.0"
+        }
+        maven {
+            url = uri("https://repo.authada.de/public/")
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                username "idnow0919"
+                password "n8rNRW9f3J"
+            }
+        }
 }
 
 dependencies {
     implementation 'com.facebook.react:react-native:+'
 
-    implementation 'de.idnow.sdk:idnow-android-sdk:6.1.4'
-    implementation 'de.idnow.android.eid:idnow-android-eid-sdk:2.5.4'
+    implementation 'de.idnow.sdk:idnow-android-sdk:6.2.0'
+    implementation 'de.idnow.android.eid:idnow-android-eid-sdk:2.5.5'
 }
