--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,6 +41,16 @@ repositories {
     maven {
         url "https://raw.githubusercontent.com/idnow/de.idnow.android/master"
     }
+    maven {
+            url = uri("https://repo.authada.de/public/")
+            authentication {
+               basic(BasicAuthentication)
+            }
+            credentials {
+               username IDNOW_USER
+               password IDNOW_PWD
+            }
+        }
 }
 
 dependencies {
