--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,7 +39,7 @@ repositories {
     mavenCentral()
     google()
     maven {
-        url "https://raw.githubusercontent.com/idnow/de.idnow.android/de.idnow.android-7.2.0"
+        url "https://raw.githubusercontent.com/idnow/de.idnow.android/master"
     }
 }
 
