--- a/demo/exampleApp/package.json
+++ b/demo/exampleApp/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.14"
+    "react-native": "0.71.14",
+    "react-native-idnow": "file:../../"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
