--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,6 +44,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.facebook.react:react-native:+'
+
     // for idnow
     implementation 'de.idnow.sdk:idnow-android-sdk:7.5.0.1'
     implementation 'de.idnow.android.eid:idnow-android-eid-sdk:2.7.4'
